This commit fixes several layout and visibility bugs.
- The draggable frames now correctly reposition themselves when the window is resized.
- The initial content visibility issue has been resolved by removing the `is-loading` class from the body after the page loads.
- The `opacity` rule that was causing the content to be hidden has been removed from the CSS.

--- a/css/style.css
+++ b/css/style.css
@@ -1061,7 +1061,6 @@ ol.default li {
   #wrapper {
     width: 45em;
     margin: 0 auto;
-    opacity: 0.00001;
   }
   #wrapper.tall {
     padding-bottom: 6em;
@@ -1350,5 +1349,105 @@ ol.default li {
     display: none;
   }
 }
+
+body {
+  overflow: hidden;
+}
+
+.container {
+  display: flex;
+  height: 100%;
+}
+
+.menu-container {
+  width: 20%;
+  padding-right: 1em;
+}
+
+.image-container {
+  width: 80%;
+  position: relative;
+}
+
+.main-image {
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: contain;
+}
+
+.resize-div {
+  border: 2px solid #ff0000;
+  position: absolute;
+  width: 100px;
+  height: 100px;
+}
+
+.group-container {
+  margin-top: 1em;
+}
+
+.zoom-container {
+  margin-top: 1em;
+  display: flex;
+  justify-content: space-between;
+}
+
+.count-header {
+  font-size: 2em;
+  text-align: center;
+}
+
+.tbl-header {
+  background-color: rgba(255, 255, 255, 0.3);
+}
+
+.tbl-content {
+  margin-top: 0px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+}
+
+table {
+  width: 100%;
+}
+
+th {
+  padding: 20px 15px;
+  text-align: left;
+  font-weight: 500;
+  font-size: 12px;
+  color: #fff;
+  text-transform: uppercase;
+}
+
+td {
+  padding: 15px;
+  text-align: left;
+  vertical-align: middle;
+  font-weight: 300;
+  font-size: 12px;
+  color: #fff;
+  border-bottom: solid 1px rgba(255, 255, 255, 0.1);
+}
+
+@media screen and (max-width: 736px) {
+  .container {
+    flex-direction: column;
+  }
+  .menu-container, .image-container {
+    width: 100%;
+    padding-right: 0;
+  }
+}
+
+.position-display {
+  position: absolute;
+  bottom: -20px;
+  left: 0;
+  color: white;
+  background-color: rgba(0, 0, 0, 0.5);
+  padding: 2px 5px;
+  font-size: 12px;
+}
+
 
 /*# sourceMappingURL=style.css.map */
